@@ -10,24 +10,26 @@ import org.apache.commons.validator.routines.EmailValidator;
 import org.esupportail.esupsignature.config.GlobalProperties;
 import org.esupportail.esupsignature.config.security.WebSecurityProperties;
 import org.esupportail.esupsignature.config.security.shib.ShibProperties;
-import org.esupportail.esupsignature.dto.json.RecipientWsDto;
-import org.esupportail.esupsignature.dto.json.SignRequestParamsWsDto;
-import org.esupportail.esupsignature.dto.view.UserDto;
+import org.esupportail.esupsignature.dto.projection.jpa.RoleManagerDto;
+import org.esupportail.esupsignature.dto.ws.RecipientWsDto;
+import org.esupportail.esupsignature.dto.ws.SignRequestParamsWsDto;
+import org.esupportail.esupsignature.dto.projection.jpa.UserDto;
 import org.esupportail.esupsignature.entity.*;
 import org.esupportail.esupsignature.entity.enums.EmailAlertFrequency;
 import org.esupportail.esupsignature.entity.enums.UiParams;
 import org.esupportail.esupsignature.entity.enums.UserType;
 import org.esupportail.esupsignature.exception.EsupSignatureRuntimeException;
 import org.esupportail.esupsignature.exception.EsupSignatureUserException;
+import org.esupportail.esupsignature.repository.RecipientRepository;
 import org.esupportail.esupsignature.repository.SignRequestParamsRepository;
 import org.esupportail.esupsignature.repository.UserRepository;
 import org.esupportail.esupsignature.service.interfaces.listsearch.UserListService;
-import org.esupportail.esupsignature.service.interfaces.sms.SmsService;
 import org.esupportail.esupsignature.service.ldap.*;
 import org.esupportail.esupsignature.service.ldap.entry.AliasLdap;
 import org.esupportail.esupsignature.service.ldap.entry.OrganizationalUnitLdap;
 import org.esupportail.esupsignature.service.ldap.entry.PersonLdap;
 import org.esupportail.esupsignature.service.ldap.entry.PersonLightLdap;
+import org.esupportail.esupsignature.service.utils.database.LikePatternUtils;
 import org.esupportail.esupsignature.service.utils.file.FileService;
 import org.hibernate.LazyInitializationException;
 import org.slf4j.Logger;
@@ -60,6 +62,8 @@ public class UserService {
     private static final Logger logger = LoggerFactory.getLogger(UserService.class);
 
     private static final String DATE_PATTERN = "yyyy-MM-dd'T'HH:mm";
+    private static final int DEFAULT_PARAPHE_SIGN_IMAGE_NUMBER = 999997;
+    private static final int DEFAULT_GENERATED_SIGN_IMAGE_NUMBER = 999998;
 
     private final GlobalProperties globalProperties;
     private final WebSecurityProperties webSecurityProperties;
@@ -68,7 +72,6 @@ public class UserService {
     private final LdapAliasService ldapAliasService;
     private final LdapGroupService ldapGroupService;
     private final LdapOrganizationalUnitService ldapOrganizationalUnitService;
-    private final SmsService smsService;
     private final ShibProperties shibProperties;
     private final UserRepository userRepository;
     private final FileService fileService;
@@ -76,6 +79,7 @@ public class UserService {
     private final UserListService userListService;
     private final ObjectMapper objectMapper;
     private final SignRequestParamsRepository signRequestParamsRepository;
+    private final RecipientRepository recipientRepository;
 
     public UserService(GlobalProperties globalProperties,
                        WebSecurityProperties webSecurityProperties,
@@ -84,7 +88,7 @@ public class UserService {
                        @Autowired(required = false) LdapAliasService ldapAliasService,
                        @Autowired(required = false) LdapGroupService ldapGroupService,
                        @Autowired(required = false) LdapOrganizationalUnitService ldapOrganizationalUnitService,
-                       @Autowired(required = false) SmsService smsService, ShibProperties shibProperties, UserRepository userRepository, FileService fileService, DocumentService documentService, UserListService userListService, ObjectMapper objectMapper, SignRequestParamsRepository signRequestParamsRepository) {
+                       ShibProperties shibProperties, UserRepository userRepository, FileService fileService, DocumentService documentService, UserListService userListService, ObjectMapper objectMapper, SignRequestParamsRepository signRequestParamsRepository, RecipientRepository recipientRepository) {
         this.globalProperties = globalProperties;
         this.webSecurityProperties = webSecurityProperties;
         this.ldapPersonService = ldapPersonService;
@@ -92,7 +96,6 @@ public class UserService {
         this.ldapAliasService = ldapAliasService;
         this.ldapGroupService = ldapGroupService;
         this.ldapOrganizationalUnitService = ldapOrganizationalUnitService;
-        this.smsService = smsService;
         this.shibProperties = shibProperties;
         this.userRepository = userRepository;
         this.fileService = fileService;
@@ -100,6 +103,7 @@ public class UserService {
         this.userListService = userListService;
         this.objectMapper = objectMapper;
         this.signRequestParamsRepository = signRequestParamsRepository;
+        this.recipientRepository = recipientRepository;
     }
 
     public User getById(Long id) {
@@ -108,6 +112,19 @@ public class UserService {
 
     public User getByEppn(String eppn) {
         return  userRepository.findByEppn(eppn).orElse(null);
+    }
+
+    private int normalizeDefaultSignImageNumber(User user, Integer signImageNumber) {
+        if (signImageNumber == null) {
+            return DEFAULT_GENERATED_SIGN_IMAGE_NUMBER;
+        }
+        if (signImageNumber == DEFAULT_GENERATED_SIGN_IMAGE_NUMBER || signImageNumber == DEFAULT_PARAPHE_SIGN_IMAGE_NUMBER) {
+            return signImageNumber;
+        }
+        if (signImageNumber >= 0 && signImageNumber < user.getSignImages().size()) {
+            return signImageNumber;
+        }
+        return DEFAULT_GENERATED_SIGN_IMAGE_NUMBER;
     }
 
     public User getByAccessToken(String accessToken) {
@@ -189,8 +206,9 @@ public class UserService {
                 user.setKeystoreFileName(user.getKeystore().getFileName());
             }
             user.setSignImagesIds(user.getSignImages().stream().map(Document::getId).collect(Collectors.toList()));
-            if (user.getDefaultSignImageNumber() == null || user.getDefaultSignImageNumber() < 0 || (user.getDefaultSignImageNumber() != 999997 && user.getDefaultSignImageNumber() >= user.getSignImages().size())) {
-                user.setDefaultSignImageNumber(999998);
+            int normalizedDefaultSignImageNumber = normalizeDefaultSignImageNumber(user, user.getDefaultSignImageNumber());
+            if (!Objects.equals(user.getDefaultSignImageNumber(), normalizedDefaultSignImageNumber)) {
+                user.setDefaultSignImageNumber(normalizedDefaultSignImageNumber);
             }
             return user;
         }
@@ -478,9 +496,9 @@ public class UserService {
         List<PersonLightLdap> personLightLdaps = new ArrayList<>();
         Set<User> users = new HashSet<>();
         if(!searchString.trim().isEmpty() && searchString.length() > 2) {
-            users.addAll(userRepository.findByEppnStartingWith(searchString));
-            users.addAll(userRepository.findByNameStartingWithIgnoreCase(searchString.toUpperCase()));
-            users.addAll(userRepository.findByEmailStartingWith(searchString));
+            users.addAll(userRepository.findByEppnStartingWith(LikePatternUtils.startsWithPattern(searchString)));
+            users.addAll(userRepository.findByNameStartingWithIgnoreCase(LikePatternUtils.startsWithPattern(searchString.toUpperCase(Locale.ROOT))));
+            users.addAll(userRepository.findByEmailStartingWith(LikePatternUtils.startsWithPattern(searchString)));
             users.removeIf(user -> user.getEppn().equals("system") || user.getEppn().equals("scheduler") || (!globalProperties.getSearchForExternalUsers() && (user.getUserType().equals(UserType.external)) || user.getEmail() == null || user.getEmail().equals(searchString)));
             for (User user : users) {
                 personLightLdaps.add(getPersonLdapLightFromUser(user));
@@ -805,12 +823,13 @@ public class UserService {
         User authUser = getByEppn(authUserEppn);
         Document signDocument = documentService.getById(id);
         int test = authUser.getSignImages().indexOf(signDocument);
-        if (authUser.getDefaultSignImageNumber().equals(test)) {
-            authUser.setDefaultSignImageNumber(999998);
-        } else {
-            if(test < authUser.getDefaultSignImageNumber()) {
-                authUser.setDefaultSignImageNumber(authUser.getDefaultSignImageNumber() - 1);
-            }
+        int defaultSignImageNumber = normalizeDefaultSignImageNumber(authUser, authUser.getDefaultSignImageNumber());
+        if (defaultSignImageNumber == test) {
+            authUser.setDefaultSignImageNumber(DEFAULT_GENERATED_SIGN_IMAGE_NUMBER);
+        } else if (defaultSignImageNumber >= 0 && defaultSignImageNumber < authUser.getSignImages().size() && test < defaultSignImageNumber) {
+            authUser.setDefaultSignImageNumber(defaultSignImageNumber - 1);
+        } else if (!Objects.equals(authUser.getDefaultSignImageNumber(), defaultSignImageNumber)) {
+            authUser.setDefaultSignImageNumber(defaultSignImageNumber);
         }
         authUser.getSignImages().remove(signDocument);
     }
@@ -852,7 +871,7 @@ public class UserService {
     @Transactional
     public void setDefaultSignImage(String authUserEppn, int signImageNumber) {
         User user = getByEppn(authUserEppn);
-        user.setDefaultSignImageNumber(signImageNumber);
+        user.setDefaultSignImageNumber(normalizeDefaultSignImageNumber(user, signImageNumber));
     }
 
     @Transactional
@@ -926,6 +945,30 @@ public class UserService {
         return userRepository.findByManagersRolesNotNull();
     }
 
+    @Transactional(readOnly = true)
+    public Map<String, List<User>> getRoleManagersMap() {
+        return groupRoleManagers(userRepository.findAllRoleManagers());
+    }
+
+    @Transactional(readOnly = true)
+    public Map<String, List<User>> getRoleManagersMap(List<String> roles) {
+        if (roles == null || roles.isEmpty()) {
+            return new LinkedHashMap<>();
+        }
+        return groupRoleManagers(userRepository.findRoleManagersByRoles(roles));
+    }
+
+    private Map<String, List<User>> groupRoleManagers(List<RoleManagerDto> roleManagers) {
+        return roleManagers.stream()
+                .sorted(Comparator.comparing(RoleManagerDto::role)
+                        .thenComparing(dto -> dto.user().getEmail(), Comparator.nullsLast(String::compareToIgnoreCase)))
+                .collect(Collectors.groupingBy(
+                RoleManagerDto::role,
+                LinkedHashMap::new,
+                Collectors.mapping(RoleManagerDto::user, Collectors.toList())
+        ));
+    }
+
     @Transactional
     public void updateReplaceUserBy(String eppn, String[] byEmail, String beginDate, String endDate) {
         User user = getByEppn(eppn);
@@ -996,12 +1039,13 @@ public class UserService {
     @Transactional
     public InputStream getFavoriteImage(String eppn) throws IOException {
         User user = getByEppn(eppn);
-        if(user.getDefaultSignImageNumber() == 999998) {
+        int defaultSignImageNumber = normalizeDefaultSignImageNumber(user, user.getDefaultSignImageNumber());
+        if(defaultSignImageNumber == DEFAULT_GENERATED_SIGN_IMAGE_NUMBER) {
             return getDefaultImage(eppn);
-        } else if (user.getDefaultSignImageNumber() == 999997) {
+        } else if (defaultSignImageNumber == DEFAULT_PARAPHE_SIGN_IMAGE_NUMBER) {
             return getDefaultParaphe(eppn);
         }
-        return user.getSignImages().get(user.getDefaultSignImageNumber()).getInputStream();
+        return user.getSignImages().get(defaultSignImageNumber).getInputStream();
     }
 
     @Transactional
@@ -1032,8 +1076,9 @@ public class UserService {
 
     @Transactional
     public List<String> getManagersRoles(String authUserEppn) {
-        User user = getByEppn(authUserEppn);
-        return user.getManagersRoles().stream().sorted(Comparator.naturalOrder()).collect(Collectors.toList());
+        return userRepository.findManagersRolesByEppn(authUserEppn).stream()
+                .sorted(Comparator.naturalOrder())
+                .toList();
     }
 
     @Transactional
@@ -1154,6 +1199,9 @@ public class UserService {
                     Arrays.asList(objectMapper.readValue(signRequestParamsJsonString, SignRequestParams[].class))
             );
             for (SignRequestParams signRequestParams : signRequestParamses) {
+                if(signRequestParams.getRecipient() == null && signRequestParams.getRecipientId() != null) {
+                    signRequestParams.setRecipient(recipientRepository.findById(signRequestParams.getRecipientId()).orElse(null));
+                }
                 if(signRequestParams.getImageBase64() != null) {
                     try {
                         user.getSignImages().add(documentService.createDocument(fileService.base64Transparence(signRequestParams.getImageBase64()), user, user.getEppn() + "_sign.png", "image/png"));
